DEV: Create possibility to create docker image with jib approach

--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.0</version>
 				<configuration>
-					<image>
-						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
-					</image>
+					<to>
+						<image>yehorbr/${project.artifactId}:s8</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
