--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
@@ -57,7 +61,7 @@
 				<version>3.4.0</version>
 				<configuration>
 					<to>
-						<image>yehorbr/${project.artifactId}:s8</image>
+						<image>yehorbr/${project.artifactId}:s11</image>
 					</to>
 				</configuration>
 			</plugin>
